v0.5.0/_sources/projections/cyl/cyl_equal_area.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_equal_area.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_equal_area.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_equal_area.py:


Cylindrical equal-area
======================

This cylindrical projection is actually several projections, depending on what
latitude is selected as the standard parallel. However, they are all equal area
and hence non-conformal. All meridians and parallels are straight lines.

**y**\ *lon0/lat0*\ */scale* or **Y**\ *lon0/lat0*\ */width*

The projection is set with **y** or **Y**. The projection center is set by
*lon0/lat0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 14-26



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_equal_area_001.png
   :alt: cyl equal area
   :srcset: /projections/cyl/images/sphx_glr_cyl_equal_area_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(
        region="d",
        projection="Y35/30/12c",
        water="dodgerblue",
        shorelines="thinnest",
        frame="afg",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.991 seconds)


.. _sphx_glr_download_projections_cyl_cyl_equal_area.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_equal_area.py <cyl_equal_area.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_equal_area.ipynb <cyl_equal_area.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
